--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "next": "13.4.9",
+    "next-sanity": "^5.1.1",
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sanity": "^3.14.2",
     "tailwindcss": "3.3.2"
   }
 }
