--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.4",
     "autoprefixer": "10.4.14",
     "next": "13.4.9",
     "next-sanity": "^5.1.1",
